--- a/carpetas/accesorios.html
+++ b/carpetas/accesorios.html
@@ -45,7 +45,7 @@
           </div>
         </nav>
   </header>
-  <div class="container text-center mt-5 bg-warning text-white w-100">
+  <div class="container text-center mt-5 bg-danger text-white w-100">
       <h1 class="text-center w-100">ACCESORIOS</h1>
   </div>
      <div class="container-fluid">
@@ -57,7 +57,7 @@
                   <div class="card-body">
                     <h5 class="card-title">manija de ktm naked</h5>
                     <p class="card-text">Juego de manijas/palancas de freno y embregue full ktm original</p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-752285967-sliders-ktm-moto-_JM?matt_tool=87796648&matt_word=&matt_source=google&matt_campaign_id=14943727189&matt_ad_group_id=131365292634&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073481&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=169763974&matt_product_id=MLA752285967&matt_product_partition_id=1415605770628&matt_target_id=aud-1659384948206:pla-1415605770628&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndh8uW82e5PEykq0rADQJ993TcvveDzMEnByEdsB2-77gKIUEY1OyuRoCO2IQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-752285967-sliders-ktm-moto-_JM?matt_tool=87796648&matt_word=&matt_source=google&matt_campaign_id=14943727189&matt_ad_group_id=131365292634&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073481&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=169763974&matt_product_id=MLA752285967&matt_product_partition_id=1415605770628&matt_target_id=aud-1659384948206:pla-1415605770628&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndh8uW82e5PEykq0rADQJ993TcvveDzMEnByEdsB2-77gKIUEY1OyuRoCO2IQAvD_BwE" class="btn btn-danger">buy</a>
             </div>
            </div>
           </div>   
@@ -69,7 +69,7 @@
                     <h5 class="card-title">Topes De Manillar Ktm</h5>
                     <p class="card-text">TOPE DE MANILLAR APTO DUKE -200-390-250 RC 200-250-390
                       MUY FACIL DE INSTALAR</p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-1112807818-pedales-palanca-cambios-y-freno-trasero-ktm-duke-200-390-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=354348736&matt_product_id=MLA1112807818&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndnN90Lm85LxLTuE0gTc3YVFUYuSk1uzQ6jiIbXdJekK2QDKkWAZHsBoC2oIQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-1112807818-pedales-palanca-cambios-y-freno-trasero-ktm-duke-200-390-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=354348736&matt_product_id=MLA1112807818&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndnN90Lm85LxLTuE0gTc3YVFUYuSk1uzQ6jiIbXdJekK2QDKkWAZHsBoC2oIQAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
                 </div>    
             </div>
@@ -80,7 +80,7 @@
               <div class="card-body">
                 <h5 class="card-title">Pedales Palanca Cambios Y Freno Trasero Ktm Duke</h5>
                 <p class="card-text">PALANCA DE CAMBIOS Y FRENO TRASEROS PARA KTM DUKE 200 390 y RC</p>
-                <a href="https://articulo.mercadolibre.com.ar/MLA-1112807818-pedales-palanca-cambios-y-freno-trasero-ktm-duke-200-390-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=354348736&matt_product_id=MLA1112807818&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndnN90Lm85LxLTuE0gTc3YVFUYuSk1uzQ6jiIbXdJekK2QDKkWAZHsBoC2oIQAvD_BwE" class="btn btn-warning">buy</a>
+                <a href="https://articulo.mercadolibre.com.ar/MLA-1112807818-pedales-palanca-cambios-y-freno-trasero-ktm-duke-200-390-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=354348736&matt_product_id=MLA1112807818&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndnN90Lm85LxLTuE0gTc3YVFUYuSk1uzQ6jiIbXdJekK2QDKkWAZHsBoC2oIQAvD_BwE" class="btn btn-danger">buy</a>
               </div>
             </div>   
                </div> 
@@ -91,7 +91,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Botas Moto Ktm Speed</h5>
                     <p class="card-text">CONFECCIONAS EN CUERO ECOLOGICO Y PU.</p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-659078809-botas-moto-ktm-speed-urban-proteccion-motoscba-_JM?matt_tool=43052634&matt_word=&matt_source=google&matt_campaign_id=14242903085&matt_ad_group_id=125225550229&matt_match_type=&matt_network=g&matt_device=c&matt_creative=538641359486&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=114213348&matt_product_id=MLA659078809&matt_product_partition_id=1397770087814&matt_target_id=aud-415044759576:pla-1397770087814&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndq46qzkn-gt-_sl_o3Jbh5Nomg81ZNoaMS59tnJfOyGzKdnZcIC7sBoCAaMQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-659078809-botas-moto-ktm-speed-urban-proteccion-motoscba-_JM?matt_tool=43052634&matt_word=&matt_source=google&matt_campaign_id=14242903085&matt_ad_group_id=125225550229&matt_match_type=&matt_network=g&matt_device=c&matt_creative=538641359486&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=114213348&matt_product_id=MLA659078809&matt_product_partition_id=1397770087814&matt_target_id=aud-415044759576:pla-1397770087814&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndq46qzkn-gt-_sl_o3Jbh5Nomg81ZNoaMS59tnJfOyGzKdnZcIC7sBoCAaMQAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
             </div>
             </div>    
@@ -102,7 +102,7 @@
                       <div class="card-body">
                         <h5 class="card-title">Cubre Puños Manos Led Moto Ktm</h5>
                         <p class="card-text">cubre puños de ktm ideales para proteccion</p>
-                        <a href="https://articulo.mercadolibre.com.ar/MLA-656764601-cubre-punos-manos-ktm-300-duke-200-390-oestemotos-_JM?matt_tool=87796648&matt_word=&matt_source=google&matt_campaign_id=14943727189&matt_ad_group_id=131365292634&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073481&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=142040950&matt_product_id=MLA656764601&matt_product_partition_id=1415605770628&matt_target_id=aud-1659384948206:pla-1415605770628&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndi-LEYFhP0MUjHccj4lfCkDyzOcwSpIzTfS45rOIaaEHfxsB3lPnthoCeL0QAvD_BwE" class="btn btn-warning">buy</a>
+                        <a href="https://articulo.mercadolibre.com.ar/MLA-656764601-cubre-punos-manos-ktm-300-duke-200-390-oestemotos-_JM?matt_tool=87796648&matt_word=&matt_source=google&matt_campaign_id=14943727189&matt_ad_group_id=131365292634&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073481&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=142040950&matt_product_id=MLA656764601&matt_product_partition_id=1415605770628&matt_target_id=aud-1659384948206:pla-1415605770628&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndi-LEYFhP0MUjHccj4lfCkDyzOcwSpIzTfS45rOIaaEHfxsB3lPnthoCeL0QAvD_BwE" class="btn btn-danger">buy</a>
                       </div>
                     </div> 
                 </div>  
@@ -113,7 +113,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Accesorio Cubre Carter Aluminio Givi Moto Ktm 390 Adventure</h5>
                     <p class="card-text">el cubrecarter en aluminio da una imagen del maxi enduro todavía más "off road"</p>
-                    <a href="https://www.motostorm.it/es/offroad/protecciones-offroad/acerbis-skid-plate-ktmhusqvarna-black-orange.html?currency=USD&size=UNICA&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndkWh9-wzACmqgaQHeF4p5kX4OqPPwjMzE0LPck7uVaGaaX61NV7LOxoCUtgQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://www.motostorm.it/es/offroad/protecciones-offroad/acerbis-skid-plate-ktmhusqvarna-black-orange.html?currency=USD&size=UNICA&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndkWh9-wzACmqgaQHeF4p5kX4OqPPwjMzE0LPck7uVaGaaX61NV7LOxoCUtgQAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
                 </div>    
           </div>
@@ -125,7 +125,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Soporte Gancho De Pared Para Casco Moto</h5>
                     <p class="card-text">Soporte super resistente, especial para tener tus casco ordenados.</p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-1132679668-soporte-de-pared-para-casco-de-moto-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=498768190&matt_product_id=MLA1132679668&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndmQi5jXtzwgpuTJiidKds4W7gw-tWUSPMlmU4GoaPO0GiYcvydqHhBoCeuUQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-1132679668-soporte-de-pared-para-casco-de-moto-_JM?matt_tool=74643699&matt_word=&matt_source=google&matt_campaign_id=14943727327&matt_ad_group_id=131365293794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073643&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=498768190&matt_product_id=MLA1132679668&matt_product_partition_id=1413150135766&matt_target_id=aud-1659384948206:pla-1413150135766&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndmQi5jXtzwgpuTJiidKds4W7gw-tWUSPMlmU4GoaPO0GiYcvydqHhBoCeuUQAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
           </div>
         </div>
@@ -137,7 +137,7 @@
                 <h5 class="card-title">Gorra Ktm Racing Bordada Premium Gabardina Negra</h5>
                 <p class="card-text">Gorra de gabardina premium, bordada.
                   Regulable, con hebilla metálica  Calidad insuperable</p>
-                <a href="https://shopee.com.ar/Gorra-Trucker-Ktm-Racing-Motocross-Bike-New-Caps-i.751202190.18402210300?gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndliP9VvIx5zkpKO4cY09mWCcetYgZt1VJYNVBuJE_KW75Tnt2n8IFhoCOicQAvD_BwE" class="btn btn-warning">buy</a>
+                <a href="https://shopee.com.ar/Gorra-Trucker-Ktm-Racing-Motocross-Bike-New-Caps-i.751202190.18402210300?gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndliP9VvIx5zkpKO4cY09mWCcetYgZt1VJYNVBuJE_KW75Tnt2n8IFhoCOicQAvD_BwE" class="btn btn-danger">buy</a>
               </div>
             </div>    
         </div>
@@ -148,7 +148,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Cadena Ktm Duke 390 Rk Con Oring 520</h5>
                     <p class="card-text">cadena ktm duke 390 rk kro heavy duty Japón con oring naranja 520 / 118 pasos la mejor </p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-861733571-cadena-ktm-duke-390-rk-con-oring-520-118-pasos-naranja-_JM?matt_tool=72894157&matt_word=&matt_source=google&matt_campaign_id=14943727198&matt_ad_group_id=131365293274&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073502&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=141678602&matt_product_id=MLA861733571&matt_product_partition_id=1415605770668&matt_target_id=aud-1659384948206:pla-1415605770668&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndli0rmZxBph9Me9odbE0U9KPRcadci1hW2Dw9kngyyIQm97Njr-FjRoCKzgQAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-861733571-cadena-ktm-duke-390-rk-con-oring-520-118-pasos-naranja-_JM?matt_tool=72894157&matt_word=&matt_source=google&matt_campaign_id=14943727198&matt_ad_group_id=131365293274&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073502&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=141678602&matt_product_id=MLA861733571&matt_product_partition_id=1415605770668&matt_target_id=aud-1659384948206:pla-1415605770668&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndli0rmZxBph9Me9odbE0U9KPRcadci1hW2Dw9kngyyIQm97Njr-FjRoCKzgQAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
            </div>
             </div>    
@@ -159,7 +159,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Cinta Para Manubrio De Bici Ktm Team Corcho Naran/negro 56gr</h5>
                     <p class="card-text">Cinta de manubrio KTM de alta calidad, fabricada en corcho y un grip muy suave.</p>
-                    <a href="https://www.tradeinn.com/bikeinn/es/cinelli-cinta-manillar-cork-ribbon/137673457/p?utm_source=google_products&utm_medium=merchant&id_producte=11325380&country=ar" class="btn btn-warning">buy</a>
+                    <a href="https://www.tradeinn.com/bikeinn/es/cinelli-cinta-manillar-cork-ribbon/137673457/p?utm_source=google_products&utm_medium=merchant&id_producte=11325380&country=ar" class="btn btn-danger">buy</a>
                   </div>
             </div>
             </div>    
@@ -170,7 +170,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Aro Llanta Did 1.85</h5>
                     <p class="card-text">Aro de llanta DID Trasera 1,85" x 19" para 36 rayos</p>
-                    <a href="https://articulo.mercadolibre.com.ar/MLA-846217728-llanta-takasago-excel-185-x-19-36h-yamaha-yzf-250-original-_JM?matt_tool=76310992&matt_word=&matt_source=google&matt_campaign_id=14943727192&matt_ad_group_id=131365292794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073484&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=114214833&matt_product_id=MLA846217728&matt_product_partition_id=1438482610031&matt_target_id=aud-1659384948206:pla-1438482610031&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndlwhlIMN1J8SBV7nMv5tCnJEvcHcokdpO4CCaZKQldknmgDiST6qgBoCSi8QAvD_BwE" class="btn btn-warning">buy</a>
+                    <a href="https://articulo.mercadolibre.com.ar/MLA-846217728-llanta-takasago-excel-185-x-19-36h-yamaha-yzf-250-original-_JM?matt_tool=76310992&matt_word=&matt_source=google&matt_campaign_id=14943727192&matt_ad_group_id=131365292794&matt_match_type=&matt_network=g&matt_device=c&matt_creative=552790073484&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=114214833&matt_product_id=MLA846217728&matt_product_partition_id=1438482610031&matt_target_id=aud-1659384948206:pla-1438482610031&gclid=CjwKCAjwoMSWBhAdEiwAVJ2ndlwhlIMN1J8SBV7nMv5tCnJEvcHcokdpO4CCaZKQldknmgDiST6qgBoCSi8QAvD_BwE" class="btn btn-danger">buy</a>
                   </div>
                 </div>
              </div>
